--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@mantine/core": "7.1.1",
 		"@mantine/hooks": "7.1.1",
+		"@tanstack/react-query": "^5.0.0-rc.4",
+		"ky": "^1.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
