--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
 		"@mantine/core": "7.1.1",
 		"@mantine/hooks": "7.1.1",
 		"@tanstack/react-query": "^5.0.0-rc.4",
+		"date-fns": "^2.30.0",
 		"ky": "^1.0.1",
+		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-leaflet": "^4.2.1"
 	},
 	"devDependencies": {
 		"@ceski23/eslint-config": "^1.5.0",
+		"@types/leaflet": "^1.9.6",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
