--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"@tanstack/react-query": "^5.0.0-rc.4",
 		"ky": "^1.0.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router": "^6.16.0",
+		"react-router-dom": "^6.16.0"
 	},
 	"devDependencies": {
 		"@ceski23/eslint-config": "^1.5.0",
