--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"date-fns": "^2.30.0",
 		"ky": "^1.0.1",
 		"leaflet": "^1.9.4",
+		"proj4leaflet": "^1.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-leaflet": "^4.2.1"
@@ -23,6 +24,7 @@
 	"devDependencies": {
 		"@ceski23/eslint-config": "^1.5.0",
 		"@types/leaflet": "^1.9.6",
+		"@types/proj4leaflet": "^1.0.8",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
