--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@mantine/core": "7.1.1",
+		"@mantine/form": "^7.1.2",
 		"@mantine/hooks": "7.1.1",
 		"@tabler/icons-react": "^2.38.0",
 		"@tanstack/react-query": "^5.0.0-rc.4",
