--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 		"vite.config.ts"
 	],
 	"rules": {
-		"import/extensions": "off"
+		"import/extensions": "off",
+		"import/no-relative-parent-imports": "off"
 	}
 }
