--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"devDependencies": {
 		"@ceski23/eslint-config": "^1.5.0",
 		"@types/leaflet": "^1.9.6",
+		"@types/leaflet.markercluster": "^1.5.2",
 		"@types/proj4leaflet": "^1.0.8",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
